{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 240,
  "lineage": "bbe23c24-2ae6-8572-ad6e-14137865bb22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elastic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a9ac35e94b22002",
            "arn": "arn:aws:ec2:us-east-2:741369372803:instance/i-00cd9a336c3fa1536",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cd9a336c3fa1536",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "admin_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0fd3f2858f2ed0a",
            "private_dns": "ip-172-31-5-211.us-east-2.compute.internal",
            "private_ip": "172.31.5.211",
            "public_dns": "ec2-3-12-71-116.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.71.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0244c894bdb7e2684",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh",
              "elastic",
              "web_from_alb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06221544c996c7042",
            "tags": {
              "Name": "elastic"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-060b43713a8b37d3e",
              "sg-087a33bc5e2e3d188",
              "sg-0ad5356d65289ee42"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_security_group.elastic",
            "aws_security_group.loadbalancer_web",
            "aws_security_group.web_from_alb",
            "aws_subnet.subnet_us_east_2a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "myfirstloadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:741369372803:loadbalancer/app/myfirstloadbalancer/eaeadf16224d101b",
            "arn_suffix": "app/myfirstloadbalancer/eaeadf16224d101b",
            "dns_name": "myfirstloadbalancer-1909335056.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:741369372803:loadbalancer/app/myfirstloadbalancer/eaeadf16224d101b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myfirstloadbalancer",
            "security_groups": [
              "sg-0f5a82561cdde0bf0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ff17930f50fc626"
              },
              {
                "subnet_id": "subnet-06221544c996c7042"
              },
              {
                "subnet_id": "subnet-0c39ea5eeab4afc52"
              }
            ],
            "subnets": [
              "subnet-02ff17930f50fc626",
              "subnet-06221544c996c7042",
              "subnet-0c39ea5eeab4afc52"
            ],
            "tags": {
              "Name": "myloadbalancer"
            },
            "vpc_id": "vpc-be17c5d5",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.loadbalancer_web",
            "aws_subnet.subnet_us_east_2a",
            "aws_subnet.subnet_us_east_2b",
            "aws_subnet.subnet_us_east_2c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:741369372803:listener/app/myfirstloadbalancer/eaeadf16224d101b/5fbed06b13d007a5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:741369372803:targetgroup/tf-20210114235845860300000005/67d2aff61d09ba6b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:741369372803:listener/app/myfirstloadbalancer/eaeadf16224d101b/5fbed06b13d007a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:741369372803:loadbalancer/app/myfirstloadbalancer/eaeadf16224d101b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.myfirstloadbalancer",
            "aws_lb_target_group.target-group-1",
            "aws_security_group.loadbalancer_web",
            "aws_subnet.subnet_us_east_2a",
            "aws_subnet.subnet_us_east_2b",
            "aws_subnet.subnet_us_east_2c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:741369372803:targetgroup/tf-20210114235845860300000005/67d2aff61d09ba6b",
            "arn_suffix": "targetgroup/tf-20210114235845860300000005/67d2aff61d09ba6b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:741369372803:targetgroup/tf-20210114235845860300000005/67d2aff61d09ba6b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20210114235845860300000005",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "target-group-1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-be17c5d5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:741369372803:targetgroup/tf-20210114235845860300000005/67d2aff61d09ba6b-20210115171713111000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:741369372803:targetgroup/tf-20210114235845860300000005/67d2aff61d09ba6b",
            "target_id": "i-00cd9a336c3fa1536"
          },
          "dependencies": [
            "aws_instance.elastic",
            "aws_lb_target_group.target-group-1",
            "aws_security_group.allow_ssh",
            "aws_security_group.elastic",
            "aws_security_group.web_from_alb",
            "aws_subnet.subnet_us_east_2a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_personal_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741369372803:security-group/sg-048b5cbc62ef30034",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-048b5cbc62ef30034",
            "ingress": [
              {
                "cidr_blocks": [
                  "96.255.42.144/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "all_personal_traffic",
            "name_prefix": null,
            "owner_id": "741369372803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "all_personal_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-be17c5d5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741369372803:security-group/sg-087a33bc5e2e3d188",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-087a33bc5e2e3d188",
            "ingress": [
              {
                "cidr_blocks": [
                  "96.255.42.144/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "741369372803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-be17c5d5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elastic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741369372803:security-group/sg-0ad5356d65289ee42",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad5356d65289ee42",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 9300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              },
              {
                "cidr_blocks": [
                  "96.255.42.144/32"
                ],
                "description": "",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              }
            ],
            "name": "elastic",
            "name_prefix": null,
            "owner_id": "741369372803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elastic"
            },
            "timeouts": null,
            "vpc_id": "vpc-be17c5d5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741369372803:security-group/sg-0f5a82561cdde0bf0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5a82561cdde0bf0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "loadbalancer_web",
            "name_prefix": null,
            "owner_id": "741369372803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loadbalancer_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-be17c5d5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741369372803:security-group/sg-060b43713a8b37d3e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-060b43713a8b37d3e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f5a82561cdde0bf0"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "https from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f5a82561cdde0bf0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web_from_alb",
            "name_prefix": null,
            "owner_id": "741369372803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_from_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-be17c5d5"
          },
          "dependencies": [
            "aws_security_group.loadbalancer_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_us_east_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741369372803:subnet/subnet-06221544c996c7042",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-06221544c996c7042",
            "map_public_ip_on_launch": true,
            "owner_id": "741369372803",
            "vpc_id": "vpc-be17c5d5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_us_east_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741369372803:subnet/subnet-0c39ea5eeab4afc52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0c39ea5eeab4afc52",
            "map_public_ip_on_launch": true,
            "owner_id": "741369372803",
            "vpc_id": "vpc-be17c5d5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_us_east_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741369372803:subnet/subnet-02ff17930f50fc626",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-02ff17930f50fc626",
            "map_public_ip_on_launch": true,
            "owner_id": "741369372803",
            "vpc_id": "vpc-be17c5d5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741369372803:vpc/vpc-be17c5d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-a04ef7cb",
            "default_route_table_id": "rtb-52d44e39",
            "default_security_group_id": "sg-cb3babb3",
            "dhcp_options_id": "dopt-90e95efb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-be17c5d5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-52d44e39",
            "owner_id": "741369372803",
            "tags": {
              "Name": "my_default"
            }
          }
        }
      ]
    }
  ]
}